# casper-compiler

./: .gitignore  CASPERConfig.cmake  CMakeLists.txt  README.md
apps/: .gitignore  CMakeLists.txt
apps/blur/: .gitignore  CMakeLists.txt  README.md  blur.meta.cpp  blur.tune.meta.cpp  halide_blur_i7_candidates.small.csv  halide_kern.meta.cpp  kern.c
apps/cahnhilliard/: CMakeLists.txt  ch.meta.cpp  firedrake_cahn_hilliard_problem.py  kern.py
apps/cavity/: CMakeLists.txt  cavity.meta.cpp  kern.py
apps/cblur/: Makefile  cblur.c
apps/matrix/: CMakeLists.txt  Makefile  bright.cpp  halide_kern.meta.cpp  kern.c  matrix.meta.cpp
autotuner/: predict.py  train.py  trainer.py
cac/: CMakeLists.txt  Executable.cpp  InputDesc.cpp  InputDesc.h  KnowledgeBase.cpp  Options.cpp  Platform.cpp  TaskGraph.cpp  TaskGraphImpl.cpp  TaskGraphImpl.h  app.cpp  build.cpp  build.h  cac.cpp  casper.cpp  halide.cpp  halide.h  ini.cpp  ini.h  mlir.cpp  mlir.h  python.cpp  python.h  tune.cpp  tune.cpp.exclude  tune.h
cac/include/: Build.h  CasperHalide.h  DatImpl.h  Executable.h  KnowledgeBase.h  Options.h  Platform.h  TaskGraph.h  casper.h
cac/include/toy/: Build.h  BuildHelpers.h  Dialect.h  Ops.td  Types.h
cac/mlir/: BuildHelpers.cpp  Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  ShapeInferencePass.cpp
cac/py/: pyop2gen.py
cac/runtime/: CMakeLists.txt  platform.cpp  python.cpp
cmake/: casper.cmake
examples/: README.md
examples/cac/: Makefile  app.mlir
knowbase/: CMakeLists.txt  global.h  hardware.cpp  hardware.h  kernel.cpp  kernel_map.cpp  kernel_map.h  load.cpp  model.cpp  readme.md  save.cpp  step.cpp  step.h  test.cpp
knowbase/include/: global.h  hardware.h  kernel.h  knowbase.h  model.h  step.h
py/: casper.py
runtime/: CMakeLists.txt  monitor.cpp  platform.cpp  profile.cpp  python.cpp
